# ChangeLog for net-mail/qprint
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-mail/qprint/ChangeLog,v 1.3 2007/02/08 13:37:16 flameeyes Exp $

  08 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
  Regenerate digest in Manifest2 format.

  15 May 2005; Alin Nastac <mrness@gentoo.org> qprint-1.0.ebuild:
  Stable on x86.

*qprint-1.0 (23 Nov 2004)

  23 Nov 2004; Andrej Kacian <ticho@gentoo.org> +metadata.xml,
  +qprint-1.0.ebuild:
  Initial import. Closes #25245, ebuild submitted by Ian Abbott <ian@abbott.org>.
