@@ -1,4 +1,4 @@
 DIST qprint-1.0.tar.gz 248872 RMD160 76b390c97a951e88a83310face941593c8d3b13a SHA1 533a4942e93cccc2e6b3fd2171707bf1d0054d20 SHA256 a92f02f2b1c12e29895df7ce200bd8001ce6be9ef092ef14284f94918719bfa8
-EBUILD qprint-1.0.ebuild 733 RMD160 5a20dfa41a59aaa9c0a5a322ba00296b83df8bfb SHA1 8674c33188326871d932ad4017b712af2c37586f SHA256 26c7872663776c132dabe5bf74c2d8310b1301419dda7028072e5f043cccb654
-MISC ChangeLog 591 RMD160 747647765bbe9f9cc88516286aa884afb04015ae SHA1 13c8db64304cd79774e76644d59dbcbfaa2a7f2f SHA256 aeacefa370819c113226d0e69e72f1d2da1f3a32da45aaa269f66dac2c6a6280
+EBUILD qprint-1.0.ebuild 742 RMD160 2463a5d276a1f25f7a10c08112a12a4d922d8df2 SHA1 d8116bd14c34133b97da0d0fc2d92c76e641af30 SHA256 755ec760a4bd7a3431611be564ee16342d2e164b1697de92f689427db1fde597
+MISC ChangeLog 680 RMD160 4bd83e02d4a0f84e6cab1d061c5ac5becba5b557 SHA1 500a8a34ed2438754b09ca6d0a58791af07d1a50 SHA256 aba07ddc0272e43692b86972486af0de5e84d0356749b61685894ceffb2086f6
 MISC metadata.xml 326 RMD160 43c900c21b767044bbd8996e2042bc4ce423096e SHA1 f2570d686a98eea7f6f28a22218f3f3480b3a077 SHA256 a2abaf173e81bb7ab0ced6e0e38d974a8e5bdd2ff254c11244e2a48e09ce8223
