@@ -1,6 +1,6 @@
-# Copyright 1999-2005 Gentoo Foundation
+# Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-mail/qprint/qprint-1.0.ebuild,v 1.2 2005/05/15 09:49:36 mrness Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-mail/qprint/qprint-1.0.ebuild,v 1.3 2008/12/19 23:25:57 loki_val Exp $
 
 DESCRIPTION="MIME quoted-printable data encoding and decoding utility"
 HOMEPAGE="http://www.fourmilab.ch/webtools/qprint/"
@@ -8,7 +8,7 @@ SRC_URI="http://www.fourmilab.ch/webtools/${PN}/${P}.tar.gz"
 
 LICENSE="as-is"
 SLOT="0"
-KEYWORDS="x86"
+KEYWORDS="x86 ~amd64"
 IUSE=""
 
 DEPEND="virtual/libc"
