@@ -1,6 +1,9 @@
 # ChangeLog for net-mail/qprint
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-mail/qprint/ChangeLog,v 1.3 2007/02/08 13:37:16 flameeyes Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-mail/qprint/ChangeLog,v 1.4 2008/12/19 23:25:57 loki_val Exp $
+
+  19 Dec 2008; Peter Alfredsen <loki_val@gentoo.org> qprint-1.0.ebuild:
+  keyword ~amd64
 
   08 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
   Regenerate digest in Manifest2 format.
